--- a/public/assets/theme/index/default/css/index/style.css
+++ b/public/assets/theme/index/default/css/index/style.css
@@ -651,3 +651,85 @@ h2.resp-accordion.hor_2{display:block}
 .grid .grid-item2:first-child{box-shadow:none;}
 
 .agencyOptions .grid .grid-item2:first-child{box-shadow:0 0 7px rgba(0,0,0,0.16);}
+
+/* My Custom CSS */
+.text-danger {color:#a94442; font-size:12px;}
+.error-message{color:#a94442; font-size:12px;
+}
+
+.alert-danger {color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+.alert h3 {
+    font-size:22px;
+}
+
+.alert {
+    padding: 15px;
+    margin: 15px 0px 0px 0px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+button.close {
+    -webkit-appearance: none;
+    padding: 0;
+    cursor: pointer;
+    background: 0 0;
+    border: 0;
+}
+.close {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=20);
+    opacity: .2;
+}
+
+html {
+    scroll-behavior: smooth;
+  }
+/* Ajax call overlay */
+  #overlay{	
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    width: 100%;
+    height:100%;
+    display: none;
+    background: rgba(0,0,0,0.6);
+  }
+  .cv-spinner {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+  }
+  .spinner {
+    width: 40px;
+    height: 40px;
+    border: 4px #a94442 solid;
+    border-top: 4px #a94442 solid;
+    border-radius: 50%;
+    animation: sp-anime 0.8s infinite linear;
+  }
+  @keyframes sp-anime {
+    100% { 
+      transform: rotate(360deg); 
+    }
+  }
+  .is-hide{
+    display:none;
+  }
+  .disable{
+    color: #ccc!important;
+    border: 1px solid #ccc !important;
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+  }
